k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aharon-rossano-pipeline-from-scratch
    app.kubernetes.io/instance: aharon-rossano-pipeline-from-scratch
    app.kubernetes.io/name: aharon-rossano-pipeline-from-scratch
  name: aharon-rossano-pipeline-from-scratch
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: aharon-rossano-pipeline-from-scratch
    app.kubernetes.io/name: aharon-rossano-pipeline-from-scratch
  sessionAffinity: None
  type: ClusterIP
