k8s/route-eventlistener.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: arpfs-el-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-arpfs
    weight: 100
